--- a/package.json
+++ b/package.json
@@ -15,18 +15,23 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^2.9.1",
+    "@types/minimatch": "^5.1.2",
     "@vercel/analytics": "^1.6.1",
+    "clsx": "^2.1.1",
     "idb": "^8.0.3",
+    "ignore": "^7.0.5",
     "immer": "^11.0.1",
     "js-tiktoken": "^1.0.21",
     "jszip": "^3.10.1",
     "lucide-react": "^0.556.0",
+    "minimatch": "^10.1.1",
     "next": "16.0.7",
     "path-browserify": "^1.0.1",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
     "react-virtuoso": "^4.17.0",
+    "tailwind-merge": "^3.4.0",
     "web-tree-sitter": "^0.24.4",
     "zustand": "^5.0.9"
   },
